crates/tokmd-format/tests/snapshots/snapshots__lang_tsv_no_files.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: output
---
Lang	Code	Lines	Bytes	Tokens
Rust	1000	1200	50000	2500
TOML	50	60	1000	125
Total	1050	1260	51000	2625
