crates/tokmd-format/tests/snapshots/snapshots__lang_tsv_with_files.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: output
---
Lang	Code	Lines	Files	Bytes	Tokens	Avg
Rust	1000	1200	10	50000	2500	120
TOML	50	60	2	1000	125	30
Total	1050	1260	12	51000	2625	105
