crates/tokmd-format/tests/snapshots/snapshots__module_json.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: pretty
---
{
  "args": {
    "children": "separate",
    "format": "json",
    "module_depth": 2,
    "module_roots": [
      "crates"
    ],
    "top": 0
  },
  "children": "separate",
  "generated_at_ms": 0,
  "mode": "module",
  "module_depth": 2,
  "module_roots": [
    "crates"
  ],
  "rows": [
    {
      "avg_lines": 119,
      "bytes": 40000,
      "code": 800,
      "files": 8,
      "lines": 950,
      "module": "crates/alpha",
      "tokens": 2000
    },
    {
      "avg_lines": 125,
      "bytes": 10000,
      "code": 200,
      "files": 2,
      "lines": 250,
      "module": "crates/beta",
      "tokens": 500
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 120,
    "bytes": 50000,
    "code": 1000,
    "files": 10,
    "lines": 1200,
    "tokens": 2500
  },
  "warnings": []
}
