crates/tokmd-format/tests/snapshots/snapshots__module_md.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: output
---
|Module|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|crates/alpha|800|950|8|40000|2000|119|
|crates/beta|200|250|2|10000|500|125|
|**Total**|1000|1200|10|50000|2500|120|
