crates/tokmd-format/tests/snapshots/snapshots__module_md_empty.snap
---
source: crates/tokmd-format/tests/snapshots.rs
assertion_line: 631
expression: output
---
|Module|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|**Total**|0|0|0|0|0|0|
